--- a/style.css
+++ b/style.css
@@ -69,10 +69,14 @@ nav ul li a:hover {
 
 /* Style the main content */
 main {
-	max-width: 800px;
+
+	min-width: 800px;
 	margin: 0 auto;
 	padding: 2rem;
+  text-align: center;
+  align-items: center;
 }
+
 
 section {
 	margin-bottom: 2rem;
